create project and employeemangment to backen

--- a/WorkforceAPI/appsettings.json
+++ b/WorkforceAPI/appsettings.json
@@ -1,13 +1,26 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=WorkforceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=WorkforceDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-  "SmtpSettings": {
+  "JWT": {
+    "Key": "YourSecretKeyHere12345678901234567890",
+    "Issuer": "WorkforceAPI",
+    "Audience": "WorkforceClient",
+    "ExpiryInMinutes": 60
+  },
+  "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "your.email@gmail.com",
+    "Username": "your-email@gmail.com",
     "Password": "your-app-password",
-    "FromEmail": "noreply@workforce.com"
+    "EnableSsl": true
   },
-  "ClientUrl": "http://localhost:3000"
+  "ClientUrl": "http://localhost:3000",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
